--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -9,7 +9,8 @@
 }
 
 .jumboContent {
-    padding-top: 10vh;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .headline {
@@ -19,16 +20,68 @@
 
 .name {
     font-family: 'Raleway', sans-serif;
-    margin-top: 40vh;
-    font-size: .8rem;
+    margin-top: 55vh;
+    margin-bottom: 0.25rem;
+    font-size: .6rem;
 }
 
 .icons li {
     list-style-type: none;
     display: inline;
-    margin: 1rem;
+    padding: 0.5rem;
 }
 
-.icons li a {
+.icons li a{
+    color: white;
+}
+
+.icons li a:hover {
     color: #c67c00;
+}
+
+@media (min-width: 540px) {
+    .headline {
+        font-size: 2rem;
+    }
+
+    .name {
+        font-size: 0.8rem;
+    }
+}
+
+@media (min-width: 720px) {
+    .jumboContent {
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    .headline {
+        font-size: 2.4rem;
+    }
+
+    .name {
+        font-size: 1rem;
+    }
+
+    .icons li {
+        padding: 1rem;
+    }
+}
+
+@media (min-width: 960px) {
+    .jumboContent {
+        padding-left: 6rem;
+        padding-right: 6rem;
+    }
+
+    .headline {
+        font-size: 2.8rem;
+    }
+}
+
+@media (min-width: 1140px) {
+    .jumboContent {
+        padding-left: 12rem;
+        padding-right: 12rem;
+    }
 }
