add latest section

--- a/src/containers/home/subComps/skills/skills.css
+++ b/src/containers/home/subComps/skills/skills.css
@@ -6,9 +6,13 @@
 
 .subtitle {
     font-family: 'Kanit', sans-serif;
-    color: #c67c00;
+    color: #000;
 }
 
 .subline {
     font-family: 'Raleway', sans-serif;
+}
+
+.line {
+    border-top-color: #c67c00 !important;
 }
