add skills subsection to work item section

--- a/src/components/portfolioItem/subComps/overview/overview.css
+++ b/src/components/portfolioItem/subComps/overview/overview.css
@@ -29,3 +29,9 @@
 .launch:hover {
     background-color: #000;
 }
+
+@media (min-width: 760px) {
+    .wrapper {
+        padding: 12rem 2rem;
+    }
+}
