--- a/src/containers/home/subComps/latest/latest.css
+++ b/src/containers/home/subComps/latest/latest.css
@@ -17,8 +17,17 @@
     border-top-color: #c67c00 !important;
 }
 
+.container {
+    overflow: hidden;
+}
+
 .image {
     height: 10rem;
+    transition: all 0.3s;
+}
+
+.image:hover {
+    transform: scale(1.1);
 }
 
 .contents {
